welcome.lessons.welcome.bat.bool2.BlueTicket.scala.error
blueTicket:2: error: not found: value ab
ab = a+b
^blueTicket:3: error: not found: value bc
bc = b+c
^blueTicket:4: error: not found: value ac
ac = a+c
^blueTicket:5: error: not found: value ab
if (ab==10 || bc==10 || ac==10) {return 10}
    ^blueTicket:6: error: not found: value ab
else if (ab == 10+bc || ab == 10+ac) {return 5}
         ^