welcome.lessons.welcome.bat.bool2.BlueTicket.scala.code
def blueTicket(a:Int, b:Int, c:Int):Int = {
ab = a+b
bc = b+c
ac = a+c
if (ab==10 || bc==10 || ac==10) {return 10}
else if (ab == 10+bc || ab == 10+ac) {return 5}
else{return 0} 
}
